2007-06-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ocaml.lang: Port the ocaml.lang
	file to the new syntax. Patch by thelema@swbell.net.

2007-06-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/perl.lang: highlight operators.
	Bug #403915.

2007-06-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/regex/glib/gregex.c: newest patched gregex.c, fixes
	here-doc highlighting in shell files.

2007-05-30  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/regex/glib/gregex.c,
	gtksourceview/regex/glib/gregex-real.h: synced with glib.
	* gtksourceview/Makefile.am: made it work with system pcre and with
	glib from svn.
	* gtksourceview/gtksourcelanguage-parser-2.c: updated for changed
	GRegex API.

2007-05-30  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/gtkrc.lang: added line-comment attribute.

	* gtksourceview/libegg: removed
	* gtksourceview/regex: new folders, pcre and gregex.
	* configure.in, acinclude.m4,
	gtksourceview/Makefile.am,
	gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcelanguage-parser-2.c:

	Ported code from EggRegex to GRegex, updated pcre to verion 7.0.
	pcre now lives in gtksourceview/regex/pcre/; gregex is in gtksourceview/regex/glib,
	so good #include <glib/gregex.h> works.

2007-05-28  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: made highlighting inet
	address at line end work.

2007-05-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/language2.rng: allow "translation-domain"
	language attribute.
	* gtksourceview/gtksourcelanguage-private.h:
	* gtksourceview/gtksourcelanguage.c (_gtk_source_language_translate_string):
	new function to translate strings in lang-file domain.
	* gtksourceview/gtksourcelanguage-parser-1.c (parseTag),
	gtksourceview/gtksourcelanguage-parser-2.c (parse_style):
	use it here.
	* gtksourceview/gtksourceview-i18n.h,