@@ -3,15 +3,139 @@ GtkSourceStyleScheme
 
 <!-- ##### SECTION Short_Description ##### -->
 
+Object controlling apperance of #GtkSourceView
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
+#GtkSourceStyleScheme contains all the text styles to be used
+in #GtkSourceView and #GtkSourceBuffer. For instance, it contains
+text styles for syntax highlighting, it may contain foreground
+and background color for non-highlighted text, etc.
+<para>
+
+</para>
+Style schemes are stored in XML files. The format of scheme file is
+the following.
+<para>
+
+</para>
+The toplevel tag in a style scheme file is <code>&lt;style-scheme&gt;</code>.
+It has the following attributes:
+<variablelist>
+<varlistentry>
+<term><code>id</code> (mandatory)</term>
+<listitem><para>
+Identifier for the style scheme. This is must be unique among style schemes.
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>name</code> (mandatory)</term>
+<listitem><para>
+Name of the style scheme. This is the name of the scheme to display to user, e.g.
+in a preferences dialog.
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>_name</code></term>
+<listitem><para>
+This is the same as <code>name</code> attribute, except it will be translated.
+<code>name</code> and <code>_name</code> may not be used simultaneously.
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>parent-scheme</code> (optional)</term>
+<listitem><para>
+Style schemes may have <em>parent</em> schemes: all styles but those specified
+in the scheme will be taken from the parent scheme. In this way a scheme may
+be customized without copying all its content.
+</para></listitem>
+</varlistentry>
+</variablelist>
+<para>
+
+</para>
+<code>style-scheme</code> content is list of <code>style</code> tags. Each
+<code>style</code> tag describes a single element of style scheme (it corresponds
+to #GtkSourceStyle object). It has the following attributes:
+<variablelist>
+<varlistentry>
+<term><code>name</code> (mandatory)</term>
+<listitem><para>
+Name of the style. It can be anything, syntax highlighting uses <em>lang-id:style-id</em>, 
+and there are few special styles which are used to control general appearance
+of the text. Style scheme may contain other names to be used in an application. For instance,
+it may define color to highlight compilation errors in a build log or a color for
+bookmarks.
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>foreground</code></term>
+<listitem><para>
+Foreground color, in hexadecimal format, e.g. "&num;000000", or symbolic name understood
+by Gdk, e.g. "magenta" or "darkred".
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>background</code></term>
+<listitem><para>
+Background color, in hexadecimal format, e.g. "&num;000000", or symbolic name understood
+by Gdk, e.g. "magenta" or "darkred".
+</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>italic</code></term>
+<listitem><para>"true" or "false"</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>bold</code></term>
+<listitem><para>"true" or "false"</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>underline</code></term>
+<listitem><para>"true" or "false"</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>strikethrough</code></term>
+<listitem><para>"true" or "false"</para></listitem>
+</varlistentry>
+</variablelist>
+<para>
+
+</para>
+The following are names of styles which control #GtkSourceView appearance:
+<variablelist>
+<varlistentry>
+<term><code>text</code></term>
+<listitem><para>Default style of text.</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>text-selected</code></term>
+<listitem><para>Style of selected text.</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>cursor</code></term>
+<listitem><para>Text cursor style. Only <code>foreground</code> attribute makes
+sense for this style</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>current-line</code></term>
+<listitem><para>Current line style. Only <code>foreground</code> attribute is used</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>bracket-match</code></term>
+<listitem><para>Style to use for matching brackets.</para></listitem>
+</varlistentry>
+<varlistentry>
+<term><code>bracket-mismatch</code></term>
+<listitem><para>Style to use for mismatching brackets.</para></listitem>
+</varlistentry>
+</variablelist>
 
 </para>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
-
+#GtkSourceStyle, #GtkSourceStyleManager
 </para>
 
 <!-- ##### SECTION Stability_Level ##### -->
